--- a/Project_1/index.html
+++ b/Project_1/index.html
@@ -12,24 +12,44 @@
       media="screen and (max-width: 1140px)"
       href="css/phone.css"
     />
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <link rel="preconnect" href="https://fonts.gstatic.com" />
     <link
       href="https://fonts.googleapis.com/css2?family=Baloo+Bhai+2:wght@600&family=Bree+Serif&display=swap"
       rel="stylesheet"
     />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
+    />
   </head>
   <body>
-    <nav id="navbar">
-      <div id="logo">
-        <img src="logo_II.png" alt="gareebcoder.com" />
+    <header>
+      <div class="inner-width">
+        <a href="#home" class="logo">
+          <img src="logo_II.png" alt="gareebcoder.com" />
+        </a>
+        <i class="menu-toggle-btn fas fa-bars"></i>
+        <nav class="navigation-menu">
+          <a href="#"><i class="fas fa-home home"></i>Home</a>
+          <a href="#services-container">
+            <i class="fab fa-buffer works"> </i>
+            Services</a
+          >
+          <a href="#client-section"><i class="fas fa-users team"></i>Clients</a>
+          <a href="#contact"
+            ><i class="fas fa-headset contact"></i>Contact Us</a
+          >
+        </nav>
       </div>
-      <ul>
-        <li class="items"><a href="#home">Home</a></li>
-        <li class="items"><a href="#services-container">Services</a></li>
-        <li class="items"><a href="#client-section">Clients</a></li>
-        <li class="items"><a href="#contact">Contact Us</a></li>
-      </ul>
-    </nav>
+    </header>
+
+    <script type="text/javascript">
+      $(".menu-toggle-btn").click(function () {
+        $(this).toggleClass("fa-times");
+        $(".navigation-menu").toggleClass("active");
+      });
+    </script>
 
     <section id="home">
       <h1 class="h-primary">Welcome to my Online Delivery</h1>
