--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,6 +9,7 @@
     <title>Portfolio</title>
     <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
 </head>
+
 <body>
     <nav class="navbar">
         <div class="max-width">
@@ -22,6 +24,12 @@
             </ul>
         </div>
     </nav>
-    
+
+    <nav class="home-section">
+        <div class="home-bar"><a href=""></a><a href=""></a><a href=""></a><a href=""></a><a href=""></a><a href=""></a>
+        </div>
+    </nav>
+
 </body>
+
 </html>
