change in vscode

--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -25,10 +25,18 @@
         </div>
     </nav>
 
-    <nav class="home-section">
-        <div class="home-bar"><a href=""></a><a href=""></a><a href=""></a><a href=""></a><a href=""></a><a href=""></a>
+
+    <section>
+        <div class="about-section"><a href=""></a>
+            <ul>
+                <li></li>
+                <li></li>
+                <li></li>
+                <li></li>
+                <li></li>
+            </ul>
         </div>
-    </nav>
+    </section>
 
 </body>
 
