--- a/Project_8/index.html
+++ b/Project_8/index.html
@@ -5,11 +5,30 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css">
     <title>Flip Card Effect</title>
 </head>
 
 <body>
+    <div class="card middle">
+        <div class="front">
+            <img src="asish.jpg" alt="profile">
+        </div>
+        <div class="back">
+            <div class="back-content middle">
+                <h2>Asish Raz</h2>
+                <span>Frontend Enthusiast</span>
+                <div class="sm">
+                    <a href=""><i class="fab fa-facebook-f"></i></a>
+                    <a href=""><i class="fab fa-twitter"></i></a>
+                    <a href=""><i class="fab fa-youtube"></i></a>
+                    <a href=""><i class="fab fa-instagram"></i></a>
+                </div>
+            </div>
 
+        </div>
+    </div>
 </body>
 
 </html>
