--- a/Project_8/index.html
+++ b/Project_8/index.html
@@ -20,10 +20,11 @@
                 <h2>Asish Raz</h2>
                 <span>Frontend Enthusiast</span>
                 <div class="sm">
-                    <a href=""><i class="fab fa-facebook-f"></i></a>
-                    <a href=""><i class="fab fa-twitter"></i></a>
-                    <a href=""><i class="fab fa-youtube"></i></a>
-                    <a href=""><i class="fab fa-instagram"></i></a>
+                    <a href="https://www.linkedin.com/in/asish-raz-75b38411b/" target="_blank"><i
+                            class="fab fa-linkedin-in"></i></a>
+                    <a href="https://twitter.com/thegareebcoder"><i class="fab fa-twitter"></i></a>
+                    <a href="https://asishraz.medium.com/"><i class="fab fa-medium"></i></a>
+                    <a href="https://github.com/asishraz"><i class="fab fa-github"></i></a>
                 </div>
             </div>
 
