--- a/Project_9/index.html
+++ b/Project_9/index.html
@@ -11,17 +11,21 @@
 
 <body>
     <div class="eyes">
-        <div class="eye">
-            <div class="ball">
-
-            </div>
-        </div>
 
         <div class="eye">
             <div class="ball">
 
             </div>
         </div>
+
+        <div class="eye">
+            <div class="ball">
+
+            </div>
+        </div>
+    </div>
+    <div class="red-circle">
+
     </div>
 
     <script>
